--- a/mscore/debugger/spanner.ui
+++ b/mscore/debugger/spanner.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>370</width>
+    <width>436</width>
     <height>214</height>
    </rect>
   </property>
@@ -31,6 +31,15 @@
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QTreeWidget" name="segments">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <attribute name="headerVisible">
+         <bool>false</bool>
+        </attribute>
         <column>
          <property name="text">
           <string notr="true">Element</string>
@@ -51,10 +60,10 @@
         <property name="bottomMargin">
          <number>0</number>
         </property>
-        <item row="0" column="1">
-         <widget class="QSpinBox" name="tick">
-          <property name="maximum">
-           <number>999999</number>
+        <item row="1" column="3">
+         <widget class="QPushButton" name="startElement">
+          <property name="text">
+           <string>startElement</string>
           </property>
          </widget>
         </item>
@@ -72,20 +81,6 @@
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="0">
-         <widget class="QLabel" name="label_2">
-          <property name="text">
-           <string>tick:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="3">
-         <widget class="QSpinBox" name="tickLen">
-          <property name="maximum">
-           <number>999999</number>
           </property>
          </widget>
         </item>
@@ -111,6 +106,34 @@
             <string>NOTE</string>
            </property>
           </item>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>tick:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="3">
+         <widget class="QSpinBox" name="tickLen">
+          <property name="maximum">
+           <number>999999</number>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QSpinBox" name="tick">
+          <property name="maximum">
+           <number>999999</number>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="4">
+         <widget class="QPushButton" name="endElement">
+          <property name="text">
+           <string>endElement</string>
+          </property>
          </widget>
         </item>
        </layout>
